fix: add shadows for better contrast

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -34,3 +34,7 @@
 	left: inherit;
 	z-index: inherit;
 }
+
+.btn-shadow {
+	@apply drop-shadow-md;
+}
